--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <div class="main__game">
                     <div class="main__game-content anim anim-no">
                         <div class="main__game-caption">
-                            <h3 class="main__game-title">Может быть отвлечемся от монотонности и сыграем в игру</h3>
+                            <p class="main__game-title">Может быть отвлечемся от монотонности и сыграем в игру</p>
                             <a href="" class="main__game-start" id="start">Начать игру</a>
                         </div>
                         <div class="main__game-time">
